Fix misaligned actions on table toolbar
Fixed the misaligned action buttons on the table toolbar when the
browser is resized to be narrow.   Before this patch the filter fields and
buttons are dispalyed out of place when resizing the browser narrow.

Closes-Bug: #1357591

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -625,7 +625,11 @@ table form {
 
 .table_actions .table_search,
 .table_actions .table_filter {
-  display: inline-block;
+   display: inline-flex;
+   display: -ms-inline-flexbox;
+   -ms-flex-direction: row;
+   display: -webkit-inline-flex;
+   display: -moz-inline-flex;
 }
 
 .table_search {
@@ -670,6 +674,11 @@ td.loading {
 }
 
 .table_header .table_actions {
+  display: inline-flex;
+  display: -ms-inline-flexbox;
+  -ms-flex-direction: row;
+  display: -webkit-inline-flex;
+  display: -moz-inline-flex;
   min-width: 0;
 }
 
@@ -678,6 +687,7 @@ td.loading {
 .table_header .table_actions .table_search button {
   display: inline-block;
   float: none;
+  max-height: 32px;
 }
 
 .table_header .table_actions .table_search select {
